kubernetes/apps/flux-system/webhooks/app/github/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webhook-receiver
spec:
  hostnames:
    - "flux-webhook.${SECRET_DOMAIN}"
  parentRefs:
    - name: external
      namespace: network

  rules:
    - backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
